# UKE-PIT2

./: README.md  TODO  generator.py  pyproject.toml  requirements.txt  setup.cfg  spider.py  uisp.py
DOCS/: Słowniki.ods  carthesian-dist.txt  harmonogram_zbierania_danych_w_2023_r.xls
DOCS/Reports-1-2024/: AIRNET-nodes.csv  AIRNET-points2.csv  AIRNET-services.csv  AIRNET-wlines3.csv  AIRNETDATASPZOO-services.csv  AIRNETINTERNETSPZOO-basestations.csv  AIRNETINTERNETSPZOO-foreigns.csv  AIRNETINTERNETSPZOO-points.csv  AIRNETINTERNETSPZOO-services.csv  AIRNETLINKSPZOO-ranges.csv  AIRNETLINKSPZOO-services.csv  AIRNETMEDIASPZOO-services.csv  AIRNETRADIOSPZOO-cables.csv  AIRNETRADIOSPZOO-services.csv  AIRNETSERWISSPZOO-colocations.csv  AIRNETSERWISSPZOO-services.csv  AIRNETSPZOO-foreigns.csv  AIRNETSPZOO-nodes.csv  AIRNETSPZOO-services.csv  AIRNETSPZOO-wlines.csv  AIRNETTECHNOLOGIESPZOO-nodes.csv  AIRNETTECHNOLOGIESPZOO-services.csv  AIRNETWIFISPZOO-services.csv  DATA-services2.csv  INTERNET-services.csv  LINK-nodes2.csv  LINK-services2.csv  MEDIA-services2.csv  RADIO-foreigns.csv  RADIO-services.csv  SERWIS-nodes.csv  SERWIS-points2.csv  SERWIS-services7.csv  WIFI-services.csv
DOCS/examples/: pit_tylko_uslugi.xlsx  pit_tylko_wifi.xlsx
tests/: test_main_class.py
tool/: nodes_uips.py
uke_pit2/: base.py  conf.py  db.py  main.py  network.py  processor.py  rb.py  test.py
uke_pit2/db_models/: __init__.py  reports.py  spider.py  update.py
uke_pit2/reports/: generators.py  models.py
web_service/: models.py  routes.py  tools.py  wsgi.py
web_service/static/: style.css
(+84 files in other folders)
