[tool.poetry]
name = "uke-pit2"
version = "0.1.0"
description = ""
authors = ["Jacek Kotlarski <szumak@virthost.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsktoolbox = "^1.0.16"
sqlalchemy = "^2.0.29"
pymysql = "^1.1.0"
pysqlite3 = "^0.5.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
